--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,141 @@
+html *
+{
+   /* font-size: 1em !important;
+   color: #000 !important; */
+   font-family: Lato !important;
+}
+
 .main {
-	border-radius: 5px;
 	background-color: #FFFFFF;
-	/* box-shadow: -9px 9px 25px 0 #E0E1E7; */
 }
 
 .eval {
 	border-radius: 5px;
 	border: 1px solid black;
-	background-color: #FFFFFF;
 }
 
 .rate {
-	float: right;
 	border-radius: 5px;
 	border: 1px solid black;
+}
+
+.assoc {
+	border-radius: 5px;
+	border: 1px solid black;
+}
+
+.likes {
+	border-radius: 5px;
+	border: 1px solid black;
+}
+
+.block {
+	margin-left: -5vw;
+    text-align: center;
+    vertical-align: middle;
+	margin-top: -5vw;
+}
+.circle {
+	background-color: #D8D8D8;
+	border-radius: 50%;
+    color: white;
+    height: 15vw;
+    font-weight: bold;
+    width: 15vw;
+    display: table;
+    margin: 20px auto;
+}
+
+.circle_likes {
+	background-color: #D8D8D8;
+	border-radius: 50%;
+    color: white;
+    height: 24px;
+    font-weight: bold;
+    width: 24px;
+    display: table;
+    margin: 20px auto;
+}
+
+
+.circle p {
+    vertical-align: middle;
+    display: table-cell;
+}
+
+.rounded-circle {
+	background-color: #00E9A6;
+}
+
+.rounded-circle h1 {
+	vertical-align: middle;
+}
+
+.merch_eval {
+	margin-top: 3vw;
+}
+
+.supported_assoc {
+	margin-top: 3vw;
+}
+
+.revioo {
+	margin-top: 5vw;
+}
+
+.buttonz {
+	margin-top: 2vw;
+}
+
+.like_button {
+	height: 30px;
+	width: 95px;
+	border: 1px solid #4DE6A3;
+	border-radius: 100px;
+	background-color: #FFF;
+	color: #4DE6A3;
+	text-align: center;
+}
+
+.report_button {
+	height: 30px;
+	width: 83px;
+	border: 1px solid #E05D6A;
+	background-color: #FFF;
+	border-radius: 100px;
+	color: #E05D6A;
+}
+
+
+.stars {
+	margin-left: -5vw;
+	margin-bottom: 2vw;
+}
+
+.star {
+	margin-left: 2.5vw;
+}
+
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+.no-gutter_top > [class*='col-2'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+.no-gutter_login > [class*='col-2'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+
+.comment_title {
+	font-style: bold;
+}
+
+.comment {
+	 color: #D1D2D5
 }
