--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 html *
 {
-   /* font-size: 1em !important;
-   color: #000 !important; */
    font-family: Lato !important;
+}
+
+.link_img {
+	display: none;
 }
 
 .main {
@@ -39,11 +41,11 @@ html *
 	background-color: #D8D8D8;
 	border-radius: 50%;
     color: white;
-    height: 15vw;
+    height: 50px;
     font-weight: bold;
-    width: 15vw;
+    width: 50px;
     display: table;
-    margin: 20px auto;
+    margin: 20px auto 0 1.4vw;
 }
 
 .circle_likes {
@@ -84,23 +86,25 @@ html *
 }
 
 .buttonz {
-	margin-top: 5vw;
+    margin-top: 5vw;
 }
 
 .report_button {
-	height: 30px;
+	height: 40px;
 	width: 83px;
 	border: 1px solid #E05D6A;
 	background-color: #FFF;
 	border-radius: 100px;
 	color: #E05D6A;
 	text-align: center;
+	line-height: 2;
 }
 
 
 .stars {
 	margin-left: -5vw;
 	margin-bottom: 2vw;
+	margin-top: 4vw;
 }
 
 .star {
@@ -136,6 +140,7 @@ html *
 	color: #4DE6A3;
 	border-radius: 50px;
 	text-align: center;
+	line-height: 2;
 }
 
 .like_button > p, div { display: inline-block; }
@@ -145,14 +150,78 @@ html *
 	border-radius: 100%;
 	background: #4DE6A3;
 	color: white;
-	height: 25px; width: 25px;
+	height: 35px; width: 35px;
     float: right;
     text-align: center;
-    line-height: 1.5;
+    line-height: 2;
 }
 
 .line {
 	height: 2px;
 	width: 210px;
 	border: 1px solid #E0E1E7;
+}
+
+.guttered {
+	padding-left: 20px !important;
+	padding-right: 20px !important;
+	margin-top: 5vw;
+	margin-bottom: 5vw;
+}
+
+.link_to_shop {
+	display: block;
+}
+
+.link_to_assoc {
+	display: block;
+}
+
+.mobile_star_rate {
+	display: none;
+}
+
+.actu_rat {
+	font-size: 150%;
+}
+
+.star_circle {
+	max-width: 50% !important;
+}
+
+@media only screen and (min-width: 768px) {
+
+	.link_to_shop {
+		display: none;
+	}
+
+	.link_img {
+		display: block;
+		max-width: 25%;
+	}
+
+	.mobile_star_rate {
+		display: block;
+	}
+
+	.mobile_star_rate p {
+		display: none;
+	}
+
+	.star_circle {
+		max-width: 25% !important;
+		margin-left: 2.5vw;
+	}
+
+	#test {
+		display: none;
+	}
+
+	.line {
+		display: none;
+	}
+
+	.revioo {
+		display: inline-block;
+	}
 }
