--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,6 @@ html *
 }
 
 .revioo {
-	/* margin-top: 5vw; */
 }
 
 .buttonz {
@@ -230,6 +229,10 @@ html *
     margin-top: 5px;
 }
 
+/*
+MOBILE VIEW RULES
+*/
+
 @media only screen and (max-width: 768px) {
 
 	.eval-container {
@@ -276,7 +279,7 @@ html *
 
 	.buy_date_user {
 		font-size: 14px;
-    	margin-left: -139px;
+    	margin-left: -120px;
 	}
 
 	.buy_date {
@@ -288,7 +291,7 @@ html *
 	    font-size: 12px;
 	    margin-left: -238px;
 	    position: absolute;
-	    margin-top: -106px;
+    margin-top: -89px;
 		font-size: 16px;
 	    margin-bottom: -24px;
 		}
@@ -301,7 +304,48 @@ html *
 	.comment {
 		font-size: 20px;
 	}
+
+	.eval_text {
+		font-weight: lighter !important;
+	}
+
+	 .assoc_text  {
+		 font-weight: lighter;
+	 }
+
+	.container {
+		padding-right: 20px !important;
+		padding-left: 20px !important;
+	}
+
+	.mob_marg {
+		margin-left:  -25px;
+	}
+	.mob_marg_more {
+		margin-left:  15px;
+	}
+
+	.link_to_shop {
+		margin-left: -23px;
+	}
+	.heart_circle {
+		max-width: 16%;
+margin-left: 0px;
+margin-top: -10px;
+	}
+	.star_rate {
+		max-width: 15%;
+		margin-top: -10px;
+	}
+
+	.supports {
+		margin-left: 18px;
+	}
 }
+
+/*
+DESKTOP VIEW RULES
+*/
 
 @media only screen and (min-width: 768px) {
 
@@ -326,6 +370,10 @@ html *
 		display: block;
 	}
 
+	.star_rate {
+		max-width: 10%;
+	}
+
 	.mobile_star_rate p {
 		display: none;
 	}
@@ -335,10 +383,10 @@ html *
 		margin-left: 2.5vw;
 	}
 
-	/* #test {
-		display: none;
+	.heart_circle {
+		max-width: 10%;
 	}
- */
+
 	.line {
 		display: none;
 	}
@@ -350,6 +398,11 @@ html *
 	.hid {
 		display: none;
 	}
+
+	/* .eval_text .assoc_text{
+		font-weight: bold;
+	} */
+
 
 	/* .suports {
 		margin-top: 100px;
