--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,20 @@ html *
    font-family: Lato !important;
 }
 
+.check {
+	float: right;
+    height: 62%;
+    border: 1px solid;
+    margin-top: -177px;
+    color: #E0E1E7;
+}
+
+.bordered {
+	border-left: 1px solid;
+	/* height: 80%; */
+	/* margin-top: 30px; */
+}
+
 .link_img {
 	display: none;
 }
@@ -38,6 +52,7 @@ html *
 .block {
     text-align: center;
 	margin-top: -2vw;
+	margin-left: -5px;
 }
 .circle {
 	background-color: #D8D8D8;
@@ -95,15 +110,15 @@ html *
 }
 
 .report_button {
-	height: 33px;
-    width: 100px;
+	height: 40px;
+    width: 120Px;
     border: 1px solid #E05D6A;
     background-color: #FFF;
     border-radius: 100px;
     color: #E05D6A;
     text-align: center;
-    line-height: 1.5;
-	margin-left: 15px;
+    line-height: 2;
+    margin-left: 15px;
 }
 
 
@@ -131,6 +146,7 @@ html *
 
 .comment_title {
 	font-style: bold;
+	margin-left: -5px;
 }
 
 .comment {
@@ -139,12 +155,12 @@ html *
 
 .like_button {
 	border: 1px solid #4DE6A3;
-	color: #4DE6A3;
-	border-radius: 50px;
-	text-align: center;
-	line-height: 1.5;
-	height: 33px;
-	width: 100px;
+    color: #4DE6A3;
+    border-radius: 50px;
+    text-align: center;
+    line-height: 2;
+    height: 40px;
+    width: 120px;
 }
 
 .like_button > p, div { display: inline-block; }
@@ -162,8 +178,10 @@ html *
 
 .line {
 	height: 2px;
-	width: 210px;
-	border: 1px solid #E0E1E7;
+    width: 100px;
+    border: 1px solid #E0E1E7;
+    margin-left: 14px;
+    margin-top: 31px;
 }
 
 .guttered {
@@ -195,6 +213,7 @@ html *
 
 
 .stars {
+	margin-left: -21px;
     margin-top: 9px;
 }
 .name_display {
@@ -209,7 +228,7 @@ html *
 .buy_date {
 	font-size: 12px;
 	color : #9B9B9B;
-	margin-left: 23px;
+	/* margin-left: 23px; */
 }
 
 .buy_date_user {
@@ -228,6 +247,12 @@ html *
 	margin-left: -70px;
     margin-top: 5px;
 }
+
+.check_two {
+	margin-top: 63px;
+	float: left;
+}
+
 
 /*
 MOBILE VIEW RULES
@@ -288,18 +313,17 @@ MOBILE VIEW RULES
 
 	.sorry {
 		color: #9B9B9B;
-	    font-size: 12px;
-	    margin-left: -238px;
-	    position: absolute;
-    margin-top: -89px;
-		font-size: 16px;
-	    margin-bottom: -24px;
+		    margin-left: -261px;
+		    position: absolute;
+		    margin-top: -79px;
+		    font-size: 16px;
+		    margin-bottom: -24px;
 		}
 
 	.abso {
 		position: absolute;
-		margin-top: 85px;
-	}
+		    margin-top: 64px;
+		    margin-left: -5px;	}
 
 	.comment {
 		font-size: 20px;
@@ -341,6 +365,12 @@ margin-top: -10px;
 	.supports {
 		margin-left: 18px;
 	}
+
+	.check
+	{
+		display: none;
+	}
+
 }
 
 /*
@@ -396,6 +426,10 @@ DESKTOP VIEW RULES
 	}
 
 	.hid {
+		display: none;
+	}
+
+	.to_hide_desk {
 		display: none;
 	}
 
