--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ html *
     width: 120px;
 }
 
-.like_button > p, div { display: inline-block; }
+.like_button > p, div { display: inline-block;}
 .like_button > p { margin: 0; }
 .like_button > div
 {
@@ -174,6 +174,8 @@ html *
     text-align: center;
 	font-size: 90%;
     line-height: 1.8;
+	position: absolute;
+	margin-left: 25px;
 }
 
 .line {
